--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "keypress": "^0.2.1",
     "lazy.js": "^0.4.2",
     "lodash": "^4.16.4",
-    "prompt-sync": "^4.1.4",
+    "prompt-sync": "git+https://github.com/0x00A/prompt-sync.git",
     "prompt-sync-history": "^1.0.1",
     "sleep": "^4.0.0",
     "sync-request": "^3.0.1",
