--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   "homepage": "https://github.com/wonderlang/wonder#readme",
   "dependencies": {
     "decimal.js": "^6.0.0",
-    "flags": "^0.1.3",
     "js-combinatorics": "^0.5.2",
     "keypress": "^0.2.1",
     "lazy.js": "^0.4.2",
     "lodash": "^4.16.4",
+    "minimist": "^1.2.0",
     "sleep": "^4.0.0",
     "sync-request": "^3.0.1",
     "traverse": "^0.6.6",
