--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "lazy.js": "^0.4.2",
     "lodash": "^4.16.4",
     "minimist": "^1.2.0",
+    "prompt-sync": "^4.1.5",
+    "prompt-sync-history": "^1.0.1",
     "sleep": "^4.0.0",
     "sync-request": "^3.0.1",
     "traverse": "^0.6.6",
